# Python_Module_42

./: README.md  README_BUILT_BY_AI.md  learning.py
module00/ex1/: ft_garden_name.py
module00/ex2/: ft_harvest_total.py  ft_plot_area.py
module00/ex3/: ft_harvest_total.py  ft_plant_age.py
module00/ex6/: ft_count_harvest_recursive.py  ft_garden_summary.py
module00/ex7/: ft_seed_inventory.py
module01/ex0/: ft_garden_intro.py
module01/ex1/: ft_garden_data.py
module01/ex2/: ft_plant_growth.py  ft_plant_growth.py.py
module01/ex3/: ft_plant_factory.py
module01/ex4/:  ft_garden_security.py  ft_garden_security.py
module01/ex5/: ft_plant_types.py
module01/ex6/: ft_garden_analytics.py
module02/ex1/: ft_raise_exception.py
module02/ex2/: ft_different_errors.py
module02/ex3/: ft_custom_errors.py
module02/ex4/: ft_finally_block.py
module03/ex0/: ft_command_quest.py
module03/ex1/: ft_score_analytics.py
module03/ex2/: ft_coordinate_system.py
module03/ex3/: ft_achievement_tracker.py
module03/ex4/: ft_inventory_system.py
module03/ex5/: ft_data_stream.py
module03/ex6/: ft_data_alchemist.py
module04/ex0/: ft_ancient_text.py
module04/ex1/: ft_archive_creation.py
module04/ex2/: ft_stream_management.py
module06/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
module07/: battle.py  capacitor.py  tournament.py
module08/ex1/: loading.py  pyproject.toml
(+161 files in other folders)
