[tool.poetry]
name = "matrix-loading-programs"
version = "0.1.0"
description = "Module08 ex1: Loading Programs"
authors = ["student <student@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "*"
numpy = "*"
matplotlib = "*"
requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
